--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,8 @@ substitute = [
   { match='import urllib3.contrib.', replace='import _CI.vendor.urllib3.contrib.' },
   { match='import rich.traceback', replace='import _CI.vendor.rich.traceback; from _CI.vendor import rich' },
   { match='import wheel.cli', replace='import _CI.vendor.wheel.cli' },
-  { match='import packaging.', replace='import _CI.vendor.packaging.' },
   { match='import build.env', replace='import _CI.vendor.build.env' },
-  { match='req = packaging.requirements.', replace='req = _CI.vendor.packaging.requirements.' },
+  { match=' packaging.', replace=' _CI.vendor.packaging.' },
 ]
 drop = [
   "pygments/styles/[!_]*.py",
