Vendor ruff and add linting.

--- a/_CI/pyproject.toml
+++ b/_CI/pyproject.toml
@@ -9,7 +9,7 @@ requires = ['setuptools', 'wheel']
 build-backend = "setuptools.build_meta"
 
 [project.optional-dependencies]
-vendor = ['vendoring', 'invoke', 'pip-tools', 'emoji', 'coloredlogs']
+vendor = ['vendoring', 'invoke', 'pip-tools', 'emoji', 'coloredlogs', 'ruff']
 
 [tool.vendoring]
 destination = './lib/vendor/'
@@ -24,17 +24,21 @@ py-modules = []  # https://github.com/jazzband/pip-tools/issues/1711 :facepalm:
 
 [tool.vendoring.transformations]
 substitute = [
-  { match='import pygments.', replace='import lib.vendor.pygments.' },
-  { match='import jsonschema.validators', replace='import lib.vendor.jsonschema.validators' },
-  { match='import urllib3.contrib.', replace='import lib.vendor.urllib3.contrib.' },
-  { match='import rich.traceback', replace='import lib.vendor.rich.traceback; from lib.vendor import rich' },
-  { match='import wheel.cli', replace='import lib.vendor.wheel.cli' },
-  { match='import build.env', replace='import lib.vendor.build.env' },
-  { match=' packaging.', replace=' lib.vendor.packaging.' },
+    { match = 'import pygments.', replace = 'import lib.vendor.pygments.' },
+    { match = 'import jsonschema.validators', replace = 'import lib.vendor.jsonschema.validators' },
+    { match = 'import urllib3.contrib.', replace = 'import lib.vendor.urllib3.contrib.' },
+    { match = 'import rich.traceback', replace = 'import lib.vendor.rich.traceback; from lib.vendor import rich' },
+    { match = 'import wheel.cli', replace = 'import lib.vendor.wheel.cli' },
+    { match = 'import build.env', replace = 'import lib.vendor.build.env' },
+    { match = ' packaging.', replace = ' lib.vendor.packaging.' },
 ]
 drop = [
-  'pygments/styles/[!_]*.py',
-  '^pygments/lexers/(?!python|__init__|_mapping).*\.py$',
-  'jsonschema/tests',
-  'coloredlogs/tests.py'
+    'pygments/styles/[!_]*.py',
+    '^pygments/lexers/(?!python|__init__|_mapping).*\.py$',
+    'jsonschema/tests',
+    'coloredlogs/tests.py'
 ]
+
+[tool.ruff]
+
+line-length = 121
